erDiagram
    counties ||--o{ sub_counties : "contains"
    sub_counties ||--o{ facilities : "contains"
    facilities ||--o{ departments : "has"
    facilities ||--o{ facility_user_roles : "employs"

    user_profiles ||--o{ healthcare_workers : "has"
    user_profiles ||--o{ facility_user_roles : "assigned"
    roles ||--o{ facility_user_roles : "grants"
    roles ||--o{ role_permissions : "contains"
    permissions ||--o{ role_permissions : "mapped"

    patients ||--o{ patient_identifiers : "identifies"
    patients ||--o{ patient_contacts : "reaches"
    patients ||--o{ patient_addresses : "resides"
    patients ||--o{ patient_relationships : "relates"
    patients ||--o{ external_identifiers : "links"
    patients ||--o{ patient_cards : "issued"

    patient_cards ||--o{ qr_tokens : "generates"

    patients ||--o{ encounters : "attends"
    facilities ||--o{ encounters : "hosts"
    user_profiles ||--o{ encounters : "conducts"

    encounters ||--o{ observations : "records"
    encounters ||--o{ diagnoses : "identifies"
    encounters ||--o{ clinical_notes : "contains"
    encounters ||--o{ procedures : "performs"
    encounters ||--o{ care_plans : "establishes"

    patients ||--o{ allergies : "has"

    medications ||--o{ prescriptions : "specified_in"
    encounters ||--o{ prescriptions : "generates"
    prescriptions ||--o{ dispensing : "dispenses"

    encounters ||--o{ lab_orders : "orders"
    lab_orders ||--o{ lab_order_items : "contains"
    lab_order_items ||--o{ lab_results : "produces"

    encounters ||--o{ referrals : "originates"
    facilities ||--o{ referrals : "refers_to"
    referrals ||--o{ referral_events : "tracks"

    patients ||--o{ consents : "authorizes"
    patients ||--o{ access_requests : "requests"
    patients ||--o{ documents : "attaches"

    patients ||--o{ audit_events : "logs_patient"
    user_profiles ||--o{ audit_events : "logs_actor"
    user_profiles ||--o{ security_events : "triggers_security"

    patients ||--o{ provenance : "tracks_origin"
